Second day of css, created cards with small translate animation and created loading icon

--- a/index.html
+++ b/index.html
@@ -15,5 +15,38 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam error dolore ut...</p>
     </div>
   </div>
+  <div class="container cards">
+    <div class="card no1">
+      <p>Article <span>on 01/02/2021</span></p>
+      <h1>Card 1</h1>
+      <span>Created by me &#128512;</span>
+    </div>
+    <div class="card no2">
+      <p>Article <span>on 01/02/2021</span></p>
+      <h1>Card 2</h1>
+      <span>Created by me &#128512;</span>
+    </div>
+    <div class="card no3">
+      <p>Article <span>on 01/02/2021</span></p>
+      <h1>Card 3</h1>
+      <span>Created by me &#128512;</span>
+    </div>
+    <div class="card no4">
+      <p>Article <span>on 01/02/2021</span></p>
+      <h1>Card 4</h1>
+      <span>Created by me &#128512;</span>
+    </div>
+    <div class="card no5">
+      <p>Article <span>on 01/02/2021</span></p>
+      <h1>Card 5</h1>
+      <span>Created by me &#128512;</span>
+    </div>
+  </div>
+
+  <div class="container">
+    <svg>
+      <rect></rect>
+    </svg>
+  </div>
 </body>
 </html>
