--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
     </div>
   </div>
 
+  <div class="container basketball-example">
+    <div class="text">
+      <h1>hell</h1>
+      <h2>basketball animation</h2>
+    </div>
+    <div class="o-basket">
+      <div class="basketball-icon">
+        <div class="middle line"></div>
+        <div class="left line"></div>
+        <div class="right line"></div>
+      </div>
+      <div class="shadow"></div>
+    </div>
+    
+  </div>
+
   <script>
     setInterval(() => {
       const degree = 6;
